feat: implement and strengthen checkout confirmation with processing lock state
- add PROCESSING to seat lock lifecycle
- update checkout confirm flow to transition locks through PROCESSING
- add atomic repository updates for processing and conversion state changes
- refine checkout validation and seat lock ownership checks
- update seat lock index migration to protect PROCESSING rows
- improve confirm-time error handling for unavailable seats