@@ -1,7 +1,5 @@
 package com.example.moviereservation.service;
 
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
@@ -14,6 +12,8 @@ import com.example.moviereservation.entity.Showtime;
 import com.example.moviereservation.entity.ShowtimeStatus;
 import com.example.moviereservation.entity.SeatLock;
 import com.example.moviereservation.entity.User;
+import com.example.moviereservation.entity.Reservation;
+import com.example.moviereservation.entity.LockStatus;
 import com.example.moviereservation.repository.UserRepository;
 import com.example.moviereservation.repository.SeatRepository;
 import com.example.moviereservation.repository.ShowtimeRepository;
@@ -47,13 +47,16 @@ public class CheckoutService {
     @Autowired
     private UserRepository userRepository;
 
+    @Autowired
+    private ReservationService reservationService;
+
     // the whole thing needs to be transactional
     // validation, loading showtime/seats/user, availability check, lock creation, reservation creation and save
     // all happen inside one service transaction
     @Transactional
     public CheckoutLockResponse lockSeats(CheckoutLockRequest request) {
         // Validate request (showtimeId, seatIds, userId/guestEmail)
-        validateRequest(request);
+        validateCheckoutLockRequest(request);
 
         Showtime showtime = showtimeRepository.findById(request.getShowtimeId())
                 .orElseThrow(() -> new ResourceNotFoundException("Showtime not found with id: " + request.getShowtimeId()));
@@ -62,11 +65,9 @@ public class CheckoutService {
         List<Seat> seats = request.getSeatIds().stream()
                 .map(seatId -> seatRepository.findById(seatId)
                         .orElseThrow(() -> new ResourceNotFoundException("Seat not found with id: " + seatId)))
-                .collect(Collectors.toList());
+                .toList();
 
         User user = resolveUser(request.getUserId());
-        // check that showtime, seats, and user (if userId provided) exist in the database
-        existenceValidation(showtime, seats, user);
         
         // check if showtime is bookable (not started, not cancelled)
         isShowtimeBookable(showtime);
@@ -93,19 +94,58 @@ public class CheckoutService {
         }
     }
 
+    @Transactional
     public CheckoutConfirmResponse confirmCheckout(CheckoutConfirmRequest request) {
-        // 1. Validate request (showtimeId, seatIds, userId/guestEmail, sessionId)
-        // 2. Verify the lock is still valid and matches the requested seats
-        // 3. If valid, create a reservation in the database and mark seats as reserved
-        // 4. Clear the lock
-        // 5. Return reservation confirmation details to the client
-        // 6. If lock is invalid or expired, return an error response indicating the issue
-        return new CheckoutConfirmResponse();
+        // Validate request (showtimeId, seatIds, userId/guestEmail, sessionId)
+        validateCheckoutConfirmRequest(request);
+        // Verify the lock is still valid and matches the requested seats
+        Showtime showtime = showtimeRepository.findById(request.getShowtimeId())
+                .orElseThrow(() -> new ResourceNotFoundException("Showtime not found with id: " + request.getShowtimeId()));
+        
+        // Find all seats
+        List<Seat> seats = request.getSeatIds().stream()
+                .map(seatId -> seatRepository.findById(seatId)
+                        .orElseThrow(() -> new ResourceNotFoundException("Seat not found with id: " + seatId)))
+                .toList();
+
+        User user = resolveUser(request.getUserId());
+
+        String sessionId = request.getSessionId();
+        
+        // usual safety checks before confirming reservation
+        // check if showtime is bookable (not started, not cancelled)
+        isShowtimeBookable(showtime);
+        // check if the input seats is valid and not exceeding the limit
+        isSeatsExceedLimit(seats);
+        // check if the seats belong to the showtime
+        isSeatsBelongToShowtime(showtime, seats);
+
+        String guestEmail = request.getGuestEmail();
+        validateLockIdentity(user, guestEmail, sessionId);
+        // change row status to "processing" to prevent other concurrent requests from using the same lock
+        markLocksAsProcessing(showtime, seats, user, sessionId);
+
+        // If valid, create a reservation in the database
+        try {
+            Reservation reservation = reserveSeats(user, guestEmail, showtime, seats);
+
+            // Update the lock status to "converted to reservation"
+            updateLockStatusToConverted(showtime, seats, user, sessionId);
+
+            // Update showtime's available seats
+            showtime.setAvailableSeats(showtime.getAvailableSeats() - seats.size());
+            showtimeRepository.save(showtime);
+
+            return buildConfirmResponse(reservation);
+        } catch (DataIntegrityViolationException e) {
+            // If not available, return an error
+            throw new SeatUnavailableException("One or more seats are no longer available");
+        }
     }
 
 
     // Helper method to validate lock request
-    private void validateRequest(CheckoutLockRequest request) throws IllegalArgumentException {
+    private void validateCheckoutLockRequest(CheckoutLockRequest request) throws IllegalArgumentException {
         // Validate showtimeId, seatIds, and either userId or guestEmail
 
         if (request.getShowtimeId() == null) {
@@ -141,22 +181,47 @@ public class CheckoutService {
         }
     }
 
-    private void existenceValidation(Showtime showtime, List<Seat> seats, User user) {
-        // Validate that showtimeId and seatIds exist in the database
-        if (!showtimeRepository.existsById(showtime.getId())) {
-            throw new ResourceNotFoundException("Showtime not found with id: " + showtime.getId());
+    private void validateCheckoutConfirmRequest(CheckoutConfirmRequest request) throws IllegalArgumentException {
+        // Validate showtimeId, seatIds, userId/guestEmail, and sessionId
+        if (request.getShowtimeId() == null) {
+            throw new IllegalArgumentException("Showtime ID is required");
+        }
+        
+        if (request.getSeatIds() == null || request.getSeatIds().isEmpty()) {
+            throw new IllegalArgumentException("At least one seat ID is required");
         }
 
-        // Validate that all seatIds exist in the database
-        for (Long seatId : seats.stream().map(Seat::getId).toList()) {
-            if (!seatRepository.existsById(seatId)) {
-                throw new ResourceNotFoundException("Seat not found with id: " + seatId);
+        // seatIds should not contain duplicates
+        if (request.getSeatIds().size() != request.getSeatIds().stream().distinct().count()) {
+            throw new IllegalArgumentException("Duplicate seat IDs are not allowed");
+        }
+
+        // // seatIds should be positive numbers
+        // if (request.getSeatIds().stream().anyMatch(seatId -> seatId <= 0)) {
+        //     throw new IllegalArgumentException("Seat IDs must be positive numbers");
+        // }
+
+        // seats should be for the same showtime - this can be checked later when we fetch the seat entities
+
+        if (request.getUserId() == null && (request.getGuestEmail() == null || request.getGuestEmail().isEmpty())) {
+            throw new IllegalArgumentException("Either user ID or guest email is required");
+        }
+
+        // if email is provided, it should be in a valid format
+        if (request.getGuestEmail() != null && !request.getGuestEmail().isEmpty()) {
+            String emailRegex = "^[A-Za-z0-9+_.-]+@(.+)$";
+            if (!request.getGuestEmail().matches(emailRegex)) {
+                throw new IllegalArgumentException("Invalid email format");
             }
         }
 
-        // If userId is provided, validate that it exists in the database
-        if (user != null && !userRepository.existsById(user.getId())) {
-            throw new ResourceNotFoundException("User not found with id: " + user.getId());
+        // cehck that sessionId is provided if guestEmail is provided, and not provided if userId is provided
+        if (request.getGuestEmail() != null && !request.getGuestEmail().isEmpty() && (request.getSessionId() == null || request.getSessionId().isEmpty())) {
+            throw new IllegalArgumentException("Session ID is required for guest users");
+        }
+
+        if (request.getUserId() != null && (request.getSessionId() != null && !request.getSessionId().isEmpty())) {
+            throw new IllegalArgumentException("Session ID should not be provided for registered users");
         }
     }
 
@@ -208,6 +273,22 @@ public class CheckoutService {
         }
     }
 
+    private void markLocksAsProcessing(Showtime showtime, List<Seat> seats, User user, String sessionId) {
+        for (Seat seat : seats) {
+            int updatedRows;
+
+            if (user != null) {
+                updatedRows = seatLockRepository.markLockAsProcessingForUser(showtime.getId(), seat.getId(), user.getId());
+            } else {
+                updatedRows = seatLockRepository.markLockAsProcessingForSession(showtime.getId(), seat.getId(), sessionId);
+            }
+
+            if (updatedRows == 0) {
+                throw new SeatUnavailableException("Seat " + seat.getId() + " is no longer available for confirmation");
+            }
+        }
+    }
+
     private List<SeatLock> createLock(User user, String guestEmail, Showtime showtime, List<Seat> seats) {
         // Create a lock entry in the database or in-memory store with details about the locked seats, showtime, user/session, and expiration time
 
@@ -246,6 +327,21 @@ public class CheckoutService {
                 .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + userId));
     }
 
+    private Reservation reserveSeats(User user, String guestEmail, Showtime showtime, List<Seat> seats) {
+        Reservation reservation = reservationService.createReservation(user, guestEmail, showtime, seats);
+        return reservation;
+    }
+
+    private void updateLockStatusToConverted(Showtime showtime, List<Seat> seats, User user, String sessionId) {
+        for (Seat seat : seats) {
+            int updatedRows;
+            updatedRows = seatLockRepository.markLockAsConverted(showtime.getId(), seat.getId(), user != null ? user.getId() : null, sessionId);
+            if (updatedRows == 0) {
+                throw new SeatUnavailableException("Seat " + seat.getId() + " is no longer available for conversion");
+            }
+        }
+    }
+
     // helper function
     private CheckoutLockResponse buildLockResponse(List<SeatLock> seatLocks) {
         String sessionId = seatLocks.getFirst().getSessionId();
@@ -256,6 +352,15 @@ public class CheckoutService {
         return new CheckoutLockResponse(sessionId, expiresAt, lockedSeatIds, "Seats locked successfully");
     }
 
+    private CheckoutConfirmResponse buildConfirmResponse(Reservation reservation) {
+        return new CheckoutConfirmResponse(reservation.getId(),
+                                            reservation.getBookingReference(),
+                                            reservation.getStatus(),
+                                            reservation.getTotalPrice(),
+                                            reservation.getSeats().stream().map(Seat::getId).toList(),
+                                            "Reservation confirmed successfully");
+    }
+
     // Helper function
     private void validateLockIdentity(User user, String guestEmail) {
         boolean hasUser = user != null;
@@ -264,6 +369,18 @@ public class CheckoutService {
         if (hasUser == hasGuestEmail) {
             throw new IllegalArgumentException(
                     "Exactly one of user or guestEmail must be provided"
+            );
+        }
+    }
+
+    private void validateLockIdentity(User user, String guestEmail, String sessionId) {
+        boolean hasUser = user != null;
+        boolean hasGuestEmail = guestEmail != null && !guestEmail.isBlank();
+        boolean hasSessionId = sessionId != null && !sessionId.isBlank();
+
+        if (hasUser == hasGuestEmail || (hasGuestEmail && !hasSessionId) || (hasUser && hasSessionId)) {
+            throw new IllegalArgumentException(
+                    "Exactly one of user or guestEmail must be provided, and sessionId must be provided for guest users and not provided for registered users"
             );
         }
     }
